// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 TqJRH"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iejWvo"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 cXHYNK"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kXsyNR"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hfAzeO"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 czTyEs"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jpqMLI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 TqJRH"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iejWvo"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 cXHYNK"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 TqJRH"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iejWvo"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 cXHYNK"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 TqJRH"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iejWvo"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 cXHYNK"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 gHYrJF"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
        dir="rtl"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 kKplom"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 kqjMfs"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 jmYFGi"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 TqJRH"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 iejWvo"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 XqqD"
      >
        <input
          className="Input-qkdgvx-0 gMNPmj"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 sxsJI"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 iFdnDn"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 kEpyYM"
      >
        <input
          className="Input-qkdgvx-0 cXHYNK"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="LabelInner-vrrjt0-0 foFqgl"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 kLWKCo"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
